# reservium-docs

./: .pre-commit-config.yaml  CHANGELOG.md  CNAME  README.md  mkdocs.yml  mkdocs.yml.back  netlify.toml  pyproject.toml  requirements.txt  zensical.toml
.github/: release-please-config.json  renovate.json
.github/workflows/: build.yaml  build.yml  create-release-notes.yaml  create-release-notes.yml  semver-tag.yml  sync-release-notes.yaml  update-docs-release.yaml
docs/: about.md  index.md
docs/api-reference/: index.md  openapi.json  scalar-reference.html
docs/assets/stylesheets/: extra.css
docs/contribute-guide/developer/: backend-setup.md  bug-report.md  feature-request.md  frontend-setup.md
docs/contribute-guide/introduction/: index.md
docs/hosting-guide/configure/: keycloak.md
docs/hosting-guide/faq/: index.md
docs/hosting-guide/install/: docker.md
docs/hosting-guide/introduction/: index.md
docs/hosting-guide/update/: docker.md
docs/manager-guide/faq/: index.md
docs/manager-guide/introduction/: index.md
docs/manager-guide/manage-events/: dashboard.md  index.md  review-reservations.md
docs/manager-guide/manager-panel/: index.md  manage-calendars.md  manage-mini-services.md  manage-reservation-services.md
docs/release-notes/: backend.md  documentation.md  frontend.md
docs/user-guide/basic-features/: create-reservation.md  dashboard.md  index.md  navigation.md
docs/user-guide/faq/: index.md
docs/user-guide/introduction/: about.md  index.md  why-use.md
docs/user-guide/quickstart/: first-setup.md  (+1 more)
scripts/: fetch_releases.py
