[project]
name = "reservium-docs"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.0"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-git-committers-plugin-2==2.5.0",
    "mkdocs-git-latest-changes-plugin==0.0.22",
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-material==9.7.0",
]
